mise en place ossature react

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,16 @@
 {
   "java.compile.nullAnalysis.mode": "automatic",
   "java.dependency.packagePresentation": "hierarchical",
-  "java.configuration.updateBuildConfiguration": "automatic"
+  "java.configuration.updateBuildConfiguration": "automatic",
+  "sqltools.connections": [
+    {
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 5432,
+      "driver": "PostgreSQL",
+      "name": "postgres",
+      "database": "TooManyChoco",
+      "username": "postgres"
+    }
+  ]
 }
