--- a/java/build.gradle
+++ b/java/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation libs.guava
     implementation 'org.postgresql:postgresql:42.7.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+    implementation 'com.sun.net.httpserver:http:20070405'
+
 
 }
 
